--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,49 @@
+.top{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.navbar{
+  display: flex;
+  flex-direction: column;
+  height: 720px;
+  width: 120px;
+  position: fixed;
+  background-color: rgb(184, 182, 182);
+}
+.navbar ul{
+  list-style: none;
+  margin-top: 10rem;
+  margin-left: -10px;
+}
+.navbar ul li{
+     margin-top:6rem;
+  }
+.navbar li a{
+  text-decoration: none;
+  color: black;
 
+}
+.title{
+  margin-left: 30%;
+  font-size: 44px;
+  font-weight: 550;
+}
+main{
+  margin-left: 140px;
+}
+
+.main-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 100px;
+}
+.container{
+  width: 550px;
+  height: 300px;
+  border: 2px solid white;
+  border-radius: 25px;
+  margin-top: 20px;
+}
