--- a/src/App.css
+++ b/src/App.css
@@ -7,68 +7,83 @@
   display: flex;
   flex-direction: column;
   height: 780px;
-  width: 130px;
+  width: 150px;
   margin-left: -20px;
   margin-top: -20px;
   margin-bottom: -20px;
   position: fixed;
-  background-color: rgb(20, 70, 141);
+  background-color: rgb(59, 55, 55);
+  
 }
 .navbar ul{
   list-style: none;
-  margin-top: 5rem;
-  margin-left: -30px;
+  margin-left: -80px;
+ 
 }
-.navbar ul li{
-     margin-top:5rem;
-     
-  }
-.navbar li a{
+.nav-ul{
+  display: flex;
+  flex-direction: column;
+  /* margin-left: -20px; */
+}
+
+.nav-ul li a{
   text-decoration: none;
-  color:black;
+  color:#FFFFFF;
   font-size: 18px;
+  text-align: center;
 
 }
 
 .nav-title{
   width: 100px;
   height: 80px;
-  color:black;
+  color: #FFFFFF;
  font-size: 28px;
- background-color: white;
+ /* background-color: white; */
  text-align: center;
  border-radius: 5px;
- margin-left: 15px;
  margin-top: 20px;
  padding-top: 30px;
 
 }
 .nav-item{
-  width: 100px;
-  height: 40px;
+  width: 190px;
+  height: 60px;
   text-align: center;
-  margin-left: 5px;
+  /* margin-left: 5px; */
+  position: relative;
+  
 }
-.nav-item:hover{
-  background-color: rgb(255, 255, 255);
-  border-radius: 10px;
-  color:black;
+.nav-item::before{
+  content: "";
+  top: 0;
+  width: 0px;
+  bottom: 10px;
+  display: none;
+  position: absolute;
+}
+.nav-item::before:hover{
+  display: inline-block;
+  width: 60px;
+  height: 4px;
+  background-color: #FFFFFF;
+
 }
 
 .title{
   /* margin-left: 35%; */
   font-size: 44px;
   font-weight: 550;
-  background-color: #86B6F6;
   width: 1490px;
   height: 80px;
   margin-left: 110px;
   margin-top: -10px;
   text-align: center;
+  color:black;
 
 }
 main{
-  margin-left: 140px;
+  margin-left: 200px;
 }
 
 .main-container{
@@ -81,14 +96,12 @@ main{
 .container{
   width: 300px;
   height: 300px;
-  border: 2px solid black;
   border-radius: 25px;
   margin-top: 20px;
-  transition: transform;
+  background-color: #FFFFFF;
+  box-shadow: 0 0 10px;
 }
-.container:hover{
-  transform:scale(1.1)
-}
+
 .container h2{
   text-align: center;
   font-size: 30px;
@@ -98,5 +111,12 @@ main{
   font-size: 60px;
   font-weight: 500;
   margin-left: 6rem;
+}
+.container2 button{
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  margin-left: 50px;
+  background-color: #5CB85C;
 }
 
