--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: black;
-  background-color: #F5F5F5;
+  color: #000000;
+  background-color: #F4F4F4;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
